# clipboard

./: .gitignore  LICENCE  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  db.rs  main.rs  utils.rs
